--- a/src/client/content/_narrow_table.scss
+++ b/src/client/content/_narrow_table.scss
@@ -77,7 +77,7 @@
 
           &:after {
             width: 15px;
-            content: '\f0dc';
+            content: '\f07d';
             font-family: 'FontAwesome';
             position: absolute;
             right: 0;
