--- a/src/client/content/styles.css
+++ b/src/client/content/styles.css
@@ -53,7 +53,7 @@
         padding-right: 22px; }
         .narrow-table tbody tr td.reorder:after {
           width: 15px;
-          content: '\f0dc';
+          content: '\f07d';
           font-family: 'FontAwesome';
           position: absolute;
           right: 0;
